# now-libraries

./: .gitattributes  .gitignore  Cargo.toml  README.md  cliff.toml
.github/workflows/: nuget-publish.yml
policies/: README.md
policies/dotnet/: Devolutions.Broker.Policy.slnx  Devolutions.Now.Policy.slnx  Devolutions.NowPolicy.slnx  README.md
policies/dotnet/Devolutions.Broker.Policy/: Devolutions.Broker.Policy.csproj  Enums.cs  PolicyJson.cs  PolicyModels.cs
policies/dotnet/Devolutions.Broker.Policy.Tests/: Devolutions.Broker.Policy.Tests.csproj  PolicyTests.cs
policies/rust/now-policy-api/: CHANGELOG.md  Cargo.toml  README.md
policies/rust/now-policy-api/openapi/: now-policy-api.yaml
policies/rust/now-policy-api/src/: api.rs  capabilities.rs  enums.rs  evaluate.rs  execute.rs  health.rs  lib.rs  policy_compat.rs  status.rs
policies/rust/now-policy-server-template/: CHANGELOG.md  Cargo.toml  README.md
policies/rust/now-policy-server-template/assets/samples/requests/: missing-package-id.request.json  powershell-pester-allusers.request.json  powershell-pester-currentuser.request.json  powershell-pester-poshtestgallery.request.json  powershell-pester-prerelease.request.json  powershell-pester-skipcheck.request.json  powershell-pester-update-currentuser.request.json  powershell-pester-version-allowed.request.json  powershell-pester-version-out-of-range.request.json  status-query-completed.request.json  winget-git-custom-location-allowed.request.json  winget-git-custom-location-denied.request.json  winget-git-custom-param-allowed.request.json  winget-git-custom-param-denied.request.json  winget-git-uninstall.request.json  winget-powertoys-install.request.json  winget-vscode-custom-param.request.json  winget-vscode-install.request.yaml  winget-vscode-interactive.request.json  winget-vscode-kill-before.request.json  winget-vscode-msstore.request.json  winget-vscode-prepost.request.json  winget-vscode-prerelease.request.json  winget-vscode-update-in-range.request.json  winget-vscode-version-in-range.request.json  winget-vscode-version-out-of-range.request.json  winget-vscode-winget-fonts.request.json  winget-vscode-x86.request.json
policies/rust/now-policy-server-template/assets/samples/responses/: capabilities.response.json  execution-winget-vscode-install.response.json  health-ready.response.json  status-completed.response.json  status-failed.response.json  status-running.response.json  status-starting.response.json  status-timeout.response.json  winget-vscode-install.allowed.response.json  winget-vscode-skiphash.denied.response.json
policies/rust/now-policy-server-template/assets/samples/scenarios/: extended.scenarios.json
policies/rust/now-policy-server-template/src/: lib.rs  mock.rs  server.rs
policies/rust/now-policy-server-template/tests/: sample_documents.rs
policies/rust/now-policy-server-template/tools/: generate_openapi.rs
policies/rust/unigetui-broker-policy/: Cargo.toml  README.md
policies/rust/unigetui-broker-policy/src/: lib.rs
policies/rust/unigetui-broker-policy/tests/: policy_samples.rs
policies/rust/unigetui-broker-policy/tools/: generate_schema.rs
protocols/docs/: make.ps1
protocols/rust/now-client/: Cargo.toml  README.md
protocols/rust/now-client/src/: capabilities.rs  client.rs  config.rs  error.rs  exec.rs  frame.rs  lib.rs
xtask/src/: dotnet.rs
(+88 files in other folders)
