[package]
name = "now-policy-api"
version = "0.1.0"
edition = "2024"
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"
description = "Implementation-agnostic Devolutions NOW policy package broker API model"
publish = true

[lints]
workspace = true

[features]
default = []
policy-compat = ["dep:now-policy"]

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
derive_more = { version = "2", features = ["as_ref", "deref", "display", "from"] }
now-policy = { version = "0.1", path = "../now-policy", optional = true }
schemars = { version = "0.8", features = ["chrono"] }
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = { version = "0.27", features = ["derive"] }
thiserror = "2"
