[package]
name = "now-policy-server-template"
version = "0.1.0"
edition = "2024"
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"
description = "Reusable Devolutions NOW package broker server facade, mock, and OpenAPI generator"
publish = true

[lints]
workspace = true

[features]
default = []
policy-compat = ["dep:now-policy", "now-policy-api/policy-compat"]

[dependencies]
aide = { version = "0.14", features = ["axum", "axum-json"] }
async-trait = "0.1"
axum = { version = "0.8", default-features = false, features = ["json"] }
now-policy-api = { version = "0.1", path = "../now-policy-api" }
now-policy = { version = "0.1", path = "../now-policy", optional = true }
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

[dev-dependencies]
tokio = { version = "1.52", features = ["macros", "rt"] }
tower = { version = "0.5", features = ["util"] }

[[bin]]
name = "generate-now-policy-api-openapi"
path = "tools/generate_openapi.rs"
