[package]
name = "unigetui-broker-policy"
version = "0.1.0"
edition = "2024"
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"
description = "UniGetUI package broker policy model and schema"
publish = true

[lints]
workspace = true

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
schemars = { version = "0.8", features = ["chrono"] }
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
url = "2"

[[bin]]
name = "generate-unigetui-broker-policy-schema"
path = "tools/generate_schema.rs"
